# RLVIB

./: .gitignore  CLAUDE.md  environment-vllama2.yml  environment.yml  pyproject.toml  requirements-api.txt
.claude/hooks/: session-start.sh
docs/: HANDOFF.md  agent-onboarding.md
docs/reports/: 01-anchored-swap-dpo.md  02-model-and-training.md
docs/research/: audio-visual-localization-maps.md  dpo-collapse-and-fixes.md  film-multistage-recipe.md  grounding-audio-to-video.md  grpo-vib.md  ib-rl-method-and-framing.md  presenting-and-strengthening.md  query-conditioned-bottleneck.md  training-data-plan.md  (+3 more)
paper/: .gitignore  build.sh  main.tex  slides.tex
scripts/: aggregate_ci.py  analyze_bottleneck.py  api_smoketest.py  attn_av_analysis.py  audit_cmm_hr.py  check_full_jsons.py  check_overlap.py  diag_audio_sensitivity.py  diag_audio_sensitivity.qsub  diag_av_tokens.py  diag_swap_sensitivity.py  diag_swap_sensitivity.qsub  eval_avhbench.qsub  eval_cmm.qsub  eval_dave.qsub  eval_film.sh  eval_mmau.qsub  eval_one.sh  extract_maps.py  extract_maps.qsub  find_avh_examples.py  find_dominance_examples.py  full_eval.sh  gpucheck.qsub  launch_all_evals.sh  launch_api_evals.sh  launch_full_evals.sh  launch_mmau.sh  launch_remaining.sh  launch_seeds.sh  localize_cosine.py  localize_cosine.qsub  make_table.py  paired_stats.py  plot_anchored.py  plot_attn_av.py  probe_edit.py  rederive_preds.py  rlvib.qsub  run_all_baselines.sh  (+33 more)
tests/: test_bottleneck.py  test_bottleneck_film.py  test_contrastive.py  test_grpo_step.py  test_lora.py  test_metrics.py  test_model_message.py
(+25 files in other folders)
